Hopefully this will work. Adding component functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus@84caae8038d0d3adc860957ccef05baeec2e2dd8
 discord.py==1.4.1
 psycopg2-binary==2.8.5
+discord-py-slash-command==2.3.1
